src/app/app.component.css
.icon-link {
    padding: 20px;
    max-height: 30px;
    max-width: 30px;
    transition: 0.3s;
}

.icon-link:hover {
    transform: translateY(-0.25rem);
}

.toolbar-img {
  margin: 0 16px;
  transition: 0.3s;
}
.toolbar-img:hover {
  transform: translateY(-0.25rem);
}

.toolbar-title {
  margin: 0 16px;
}
.toolbar-title:hover{
  font-weight: bold;
}
.content {
    display: flex;
    margin: 82px auto 32px;
    padding: 0 16px;
    max-width: 960px;
    flex-direction: column;
    align-items: center;
  }

  


.extreme-header {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 45px;
  margin:10px;
  padding:10px
}

footer {
    margin-top: 8px;
    display: flex;
    align-items: center;
    line-height: 20px;
}

footer a {
    display: flex;
    align-items: center;
}

a,
a:visited,
a:hover {
  color: #1976d2;
  text-decoration: none;
}

a:hover {
  color: #125699;
}


:host {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    color: #333;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 8px 0;
  }
  


  .spacer {
    flex: 1;
  }

